# adaptive-bot

./: .gitignore  ANALIZA_BOTA_ADAPTACYJNEGO.md  Dockerfile  PROJECT_GUIDELINES.md  README.md  api_service.py  backtester.py  client.py  data_downloader.py  data_downloader_async.py  docker-compose.yaml  docker-compose.yml  feature_names_long.json  main.py  model_trainer.py  payload.json  pyproject.toml  requirements.txt  scaler_short.joblib  streamlit_gui.py  trading_bot.py  zalozenia projektu 2.md  zalozenia projektu.txt
backtesting/: __init__.py  validator.py  vectorbt_engine.py
core/: __init__.py  live_trading.py  portfolio_sync.py  regime_detector.py  risk_manager.py
data/: __init__.py  bybit_provider.py
database/: init.sql  models.py
factory/: Dockerfile  api_service.py  backtester.py  data_processor.py  dynamic_backtester.py  feature_names_long.json  historical_data_icp_1h.csv  historical_data_icp_4h.csv  model_trainer.py  prediction_service.py  requirements.txt  scaler_short.joblib  september_2025_1h.csv  september_2025_4h.csv  trading_model_short.joblib
factory_boost/: api_service.py  data_processor.py  docker-compose.yaml  model_trainer.py  requirements.txt
indicators/: __init__.py  technical.py
learning/: Dockerfile  api_server.py  backtester.py  data_processor.py  historical_data_icp_1D.csv  prediction_service.py  readme.txt  requirements.txt  september_2025_1D.csv  strategy_lab_trades_log.csv  trading_model.joblib  trading_model.py  train_and_save_model.py
logic/: gui_config.py
strategies/: __init__.py  consolidation_strategy.py  (+1 more)
(+9 files in other folders)
